Prepare groth1.tex for splitting into two versions.
There will now be a main file and an "alternative version". The main
file will get most of the shortening (and will lose the verlong
environments for good), while the alternative version will remain mostly
unabridged (but errors will still be corrected in both versions). The
alternative version will be named groth1alt.tex.

--- a/groth1.tex
+++ b/groth1.tex
@@ -136,7 +136,11 @@
 
 \title{Refined dual stable Grothendieck polynomials and generalized Bender-Knuth involutions}
 \author{Pavel Galashin, Darij Grinberg, and Gaku Liu}
-\date{\today}
+\date{alternative version\footnote{This version of the paper is the closest
+to its original (written back in January 2015). It has the most details and
+contains an explicit statement and proof of the diamond lemma, as well as
+an application thereof which was omitted from the later versions of the
+paper.}\ , \today}
 \maketitle
 
 \section{Introduction}
