Diamond lemma inlined.
Shortened the main file by about 9 pages by removing the diamond-lemma
section and turning the diamond lemma from a lemma into a proof tactic.
Pavel, your reference to {prop.finality} needs to be updated.

--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -3980,7 +3980,9 @@ increasing along rows, and thus it is a 12-rpp. The converse is just as
 obvious.}
 \end{verlong}
 
+\begin{verlong}
 We notice a simple fact which we will not use until much later:
+\end{verlong}
 
 \begin{proposition}
 \label{prop.conflict.transitive}Let $T$ be a 12-table. Let $a$, $b$ and $c$ be
@@ -4191,8 +4193,8 @@ as conflicts), while the 12-table $%
 \end{ytableau}%
 %EndExpansion
 $ is not (its conflict $\left(  2,3\right)  $ has the property that the $2$-nd
-column and the $3$-rd column both are mixed). Notice that 12-rpps are benign
-12-tables, but the converse is not true.
+column and the $3$-rd column both are mixed). Notice that 12-rpps of shape
+$Z$ are benign 12-tables, but the converse is not true.
 
 Let us give an alternative description of benign 12-tables. Namely, if $T$ is
 a 12-table, and if $k\in\mathbb{N}_{+}$ is such that the $k$-th column of $T$
@@ -9232,7 +9234,7 @@ conflicts to satisfy the length-decrease condition.
 
 \subsection{Definition of $\mathbf{B}$}
 
-We can now finally prove Lemma \ref{lem.BK}
+We can now finally prove Lemma \ref{lem.BK}.
 
 \begin{definition}
 Let us define a map $\mathbf{B}:\mathbf{R}\rightarrow\mathbf{R}$ as follows:
