Replace {comment} by {noncompile} environments for consistence.

--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -478,7 +478,7 @@ $Y\left(  \lambda/ \mu\right)  $ do not ``store'' the skew partition $\lambda/
 \end{remark}
 \end{vershort}
 
-\begin{comment}
+\begin{noncompile}
 [Here is some older writing which I have commented out because it is too
 long and rather irrelevant to this paper.]
 However, there is a minor discrepancy between
@@ -495,7 +495,7 @@ convex subset $Z$ of $\mathbb{N}_{+}^{2}$ can be written in the form $Y\left(
 \lambda/\mu\right)  $, but not uniquely, and thus one and the same filling of
 one and the same subset $Z$ can have different skew partitions $\lambda/\mu$
 assigned to it. For us, however, the difference does not matter.
-\end{comment}
+\end{noncompile}
 
 
 \begin{verlong}
