Define trailing-zeroes abuse of notation; improve acknowledmgents

--- a/groth1.tex
+++ b/groth1.tex
@@ -262,7 +262,7 @@ characters\textquotedblright, the other one is still there).
 \subsection{Acknowledgments}
 
 We owe our familiarity with dual stable Grothendieck polynomials to Richard
-Stanley. Thanks are also due to Alexander Postnikov for providing context and motivation.
+Stanley. We thank Alexander Postnikov for providing context and motivation.
 
 \begin{todo}
 Keep this up to date.
@@ -286,15 +286,13 @@ _{+}=\left\{  1,2,3,\ldots\right\}  $.
 
 A \textit{partition} is a weak composition $\left(  \alpha_{1},\alpha
 _{2},\alpha_{3},\ldots\right)  $ satisfying $\alpha_{1}\geq\alpha_{2}
-\geq\alpha_{3}\geq\cdots$. 
+\geq\alpha_{3}\geq\cdots$.
+As usual, we often omit trailing zeroes when writing a partition (e.g.,
+the partition $\left(5,2,1,0,0,0,\ldots\right)$ can thus be written as
+$\left(5,2,1\right)$).
 
 \begin{todo}
  Come up with a better notation for ircont, stagnant.
-\end{todo}
-
-\begin{todo}
- Tell the reader that trailing zeroes can be omitted when writing a
- partition.
 \end{todo}
 
 We identify each partition $\lambda$ with the subset
