--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -256,7 +256,7 @@ characters\textquotedblright, the other one is still there).
 \subsection{Acknowledgments}
 
 We owe our familiarity with dual stable Grothendieck polynomials to Richard
-Stanley. Thanks are also due to Alexander Postnikov for providing context and motivation.
+Stanley. We thank Alexander Postnikov for providing context and motivation.
 
 \begin{todo}
 Keep this up to date.
